--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,11 @@
 [submodule "lib/forge-gas-snapshot"]
 	path = lib/forge-gas-snapshot
 	url = https://github.com/marktoda/forge-gas-snapshot
+	branch = main
+[submodule "lib/erc721-permit"]
+	path = lib/erc721-permit
+	url = https://github.com/soliditylabs/erc721-permit
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+	tag = v4.9.6
