--- a/foundry.toml
+++ b/foundry.toml
@@ -3,7 +3,9 @@ src = "src"
 out = "out"
 libs = ["lib"]
 ffi = true
-optimizer_runs = 800
+optimizer = true
+via-ir = true
+optimizer_runs = 100
 solc = "0.8.26"
 evm_version = "cancun"
 fs_permissions = [{ access = "read-write", path = ".forge-snapshots/"}]
