--- a/.gitmodules
+++ b/.gitmodules
@@ -17,6 +17,6 @@
 	path = lib/solmate
 	url = https://github.com/transmissions11/solmate
 	branch = v7
-[submodule "lib/lib/permit2"]
+[submodule "lib/permit2"]
 	path = lib/lib/permit2
 	url = https://github.com/Uniswap/permit2
