--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "lib/permit2"]
 	path = lib/permit2
 	url = https://github.com/Uniswap/permit2
+[submodule "lib/rocketpool"]
+	path = lib/rocketpool
+	url = https://github.com/rocket-pool/rocketpool
