modified git action .xml
Signed-off-by: ttswap <ttswap.exchange@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,12 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install solc
+        run: npm install -g solc@0.8.17
+
+      - name: Install solc
+        run: npm install -g solc@0.8.29
+
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1.3.1
         
